# eve

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml
configs/: pricing.yaml
configs/eve/: circle_packing.smoke.yaml  circle_packing.yaml  icon.resume.yaml  icon.smoke.yaml  icon.yaml  math_proof_jensen_covering.yaml  math_proof_quickstart.yaml
configs/eve/application/: circle_packing.yaml  icon.yaml  math_proof_jensen_covering.yaml  math_proof_quickstart.yaml
configs/eve/driver/: claude_noninteractive.yaml  claude_tmux.yaml  codex_max.yaml  codex_noninteractive.yaml  codex_openrouter.yaml  codex_smoke.yaml  codex_tmux.yaml  codex_tmux_gpt5.yaml  codex_tmux_icon.yaml  max.yaml  max_interactive.yaml  mixed_codex_claude.yaml  openrouter_gpt5.yaml
configs/eve/evaluation/: circle_packing.judge.yaml  circle_packing.yaml  icon.yaml  math_proof.yaml
configs/eve/logger/: csv.yaml  many_loggers.yaml  wandb.yaml
configs/eve/loop/: default.yaml  fixed_optimizer.yaml  math_proof.yaml
configs/eve/optimizer/: circle_packing.yaml  icon.yaml  math_proof.yaml
configs/eve/prompt/: default.yaml  icon.yaml
configs/eve/runtime/: default.yaml
docs/: papers.md  structure.md  using-eve.md
docs/skills/configure-eve-driver/: SKILL.md
docs/skills/debug-agent-session/: SKILL.md
docs/skills/implement-check-subagent/: SKILL.md
docs/skills/implement-evaluation-steps/: SKILL.md
docs/skills/implement-subagent/: SKILL.md
docs/skills/import-run/: SKILL.md
docs/skills/inspect-population/: SKILL.md
docs/skills/resume-run/: SKILL.md
docs/skills/run-circle-packing-smoke/: SKILL.md
examples/icon/: README.md
scripts/: install_gap3_jm.sh  install_gap_4.16.sh
src/scaling_evolve/: __init__.py  _version.py
tests/: conftest.py  test_agent_runtime_env.py  test_applications_base.py  test_backend.py  test_claude_code_tmux_driver.py  test_codex_exec_driver.py  test_codex_hooks.py  test_codex_isolation.py  test_codex_tmux_driver.py  test_codex_tmux_pool.py  test_compaction.py  test_eve_binary_safety.py  test_eve_csv_logger.py  test_eve_file_tree.py  test_eve_guidance_agents.py  test_eve_icon_config.py  test_eve_imports.py  test_eve_logger.py  test_eve_logger_group.py  test_eve_probe.py  test_eve_restore.py  test_eve_resume.py  test_eve_runner.py  test_eve_runtime_driver.py  test_eve_runtime_hooks.py  test_eve_skills.py  test_eve_steps.py  test_openrouter_cache_canary.py  test_openrouter_cache_report.py  test_openrouter_proxy.py  test_python_runtime.py  test_repo_task_problem.py  test_rollout_prompts_package.py  test_sandbox.py  test_session_log_claude_code.py  test_session_log_codex.py  test_tmux_runtime.py
(+235 files in other folders)
